--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
+    <!-- Icon Bootstrap 5 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- Swipper JS CSS -->
-    <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <!-- Font Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet" />
 
     <title>Document</title>
   </head>
@@ -58,7 +65,7 @@
               <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Pesan</button>
             </div>
             <div class="col">
-              <img src="./assets/img/hero/Desain tanpa judul.png" alt="" />
+              <img loading="lazy" src="./assets/img/hero/1.svg" alt="" />
             </div>
           </div>
         </div>
@@ -78,21 +85,21 @@
         <div class="row pt-3">
           <div class="col-lg-4">
             <div class="card-body text-center">
-              <img class="card-img-top w-50" src="./assets/img/whyUs/3.png" alt="" />
+              <img class="card-img-top w-50" src="./assets/img/whyUs/2.svg" alt="" />
               <h5 class="card-title">Gratis antar</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="card-body text-center">
-              <img class="card-img-top w-50" src="./assets/img/whyUs/4.png" alt="" />
+              <img class="card-img-top w-50" src="./assets/img/whyUs/3.svg" alt="" />
               <h5 class="card-title">Halal</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="card-body text-center">
-              <img class="card-img-top w-50" src="./assets/img/whyUs/5.png" alt="" />
+              <img class="card-img-top w-50" src="./assets/img/whyUs/4.svg" alt="" />
               <h5 class="card-title">Aman</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
@@ -113,7 +120,7 @@
         <div class="row justify-content-center pembungkus-profile">
           <div class="col-lg-3 p-2 text-center">
             <div class="card shadow bg-danger">
-              <img class="img-profile" src="./assets/img/kategori/1.png" alt="" />
+              <img class="img-profile" src="./assets/img/kategori/1.svg" alt="" />
               <div class="card-img-overlay">
                 <div class="team-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
@@ -125,7 +132,7 @@
           </div>
           <div class="col-lg-3 p-2 text-center">
             <div class="card shadow bg-danger">
-              <img class="img-profile" src="./assets/img/kategori/2.png" alt="" />
+              <img class="img-profile" src="./assets/img/kategori/2.svg" alt="" />
               <div class="card-img-overlay">
                 <div class="team-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
@@ -137,7 +144,7 @@
           </div>
           <div class="col-lg-3 p-2 text-center">
             <div class="card shadow bg-danger">
-              <img class="img-profile" src="./assets/img/kategori/3.png" alt="" />
+              <img class="img-profile" src="./assets/img/kategori/3.svg" alt="" />
               <div class="card-img-overlay">
                 <div class="team-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
@@ -149,7 +156,7 @@
           </div>
           <div class="col-lg-3 p-2 text-center">
             <div class="card shadow bg-danger">
-              <img class="img-profile" src="./assets/img/kategori/3.png" alt="" />
+              <img class="img-profile" src="./assets/img/kategori/4.svg" alt="" />
               <div class="card-img-overlay">
                 <div class="team-bungkus p-3 w-100 text-white text-start">
                   <h5 class="card-title py-2">Lainnya</h5>
@@ -165,28 +172,186 @@
 
     <!-- Terlaris -->
     <section id="terlaris">
-      <div class="container">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col text-center">
+            <h1><span class="text-danger fw-bold">Ayam </span>terlaris</h1>
+          </div>
+        </div>
         <div class="row">
           <div class="col">
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
-                <div class="swiper-slide">Slide 6</div>
-                <div class="swiper-slide">Slide 7</div>
-                <div class="swiper-slide">Slide 8</div>
-                <div class="swiper-slide">Slide 9</div>
+                <div class="swiper-slide">
+                  <div class="shadow my-5">
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <div class="card-body text-start">
+                      <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
+                      <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
+                      <div class="d-grid gap-2">
+                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="shadow my-5 card-laris">
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <div class="card-body text-start">
+                      <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
+                      <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
+                      <div class="d-grid gap-2">
+                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="shadow my-5 card-laris">
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <div class="card-body text-start">
+                      <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
+                      <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
+                      <div class="d-grid gap-2">
+                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="shadow my-5 card-laris">
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <div class="card-body text-start">
+                      <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
+                      <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
+                      <div class="d-grid gap-2">
+                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="shadow my-5 card-laris">
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <div class="card-body text-start">
+                      <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
+                      <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
+                      <div class="d-grid gap-2">
+                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="swiper-pagination"></div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Terlaris End -->
+
+    <!-- Langkah -->
+    <section id="langkah">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-lg">
+            <h1>Cara <span class="text-danger">memesan</span></h1>
+            <div class="row py-3">
+              <div class="col-2">
+                <img src="./assets/img/langkah/4.svg" alt="" />
+              </div>
+              <div class="col"><p class="my-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quasi quis sit necessitatibus adipisci hic maiores repellendus natus, officia aperiam?</p></div>
+            </div>
+            <div class="row py-3">
+              <div class="col-2">
+                <img src="./assets/img/langkah/5.svg" alt="" />
+              </div>
+              <div class="col"><p class="my-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sed, fuga amet ducimus veniam voluptatem!</p></div>
+            </div>
+            <div class="row py-3">
+              <div class="col-2">
+                <img src="./assets/img/langkah/6.svg" alt="" />
+              </div>
+              <div class="col"><p class="my-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, recusandae.</p></div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img class="p-5" src="./assets/img/langkah/app_step (1).png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Langkah End -->
+
+    <!-- Contact -->
+    <section class="mt-5 bg-danger" id="contact">
+      <div class="container py-5 text-white">
+        <div class="row">
+          <div class="col text-center">
+            <h2>Hubungi kami jika ada masalah atau pertanyaan</h2>
+            <p class="py-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, odit dicta? Harum, illum veniam doloribus consequuntur porro, iste deleniti architecto nihil magnam dolorum, neque recusandae soluta laudantium perferendis?
+              Necessitatibus, consequatur?
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-3 text-center">
+            <p><i class="bi bi-telephone-fill text-warning"></i> Telp. 0251 8395655</p>
+          </div>
+          <div class="col-lg-3 text-center">
+            <p><i class="bi bi-envelope-open-fill text-warning"></i> support@beliayam.com</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact End -->
+
+    <!-- MAP -->
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2771108939132!2d106.8061061641937!3d-6.227148562718144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f14e437f4501%3A0xfee7b40472799f14!2sGoWork%20fX%20Sudirman%20-%20Coworking%20and%20Office%20Space!5e0!3m2!1sid!2sid!4v1635950184285!5m2!1sid!2sid"
+      height="450"
+      style="width: 100%"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
+    <!-- MAP End -->
+
+    <!-- Footer -->
+    <section class="bg-danger" id="footer">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-3">
+            <img src="./assets/img/navbar/logo_navbar.png" alt="" />
+            <a class="h3 px-1 text-light" href=""><i class="bi bi-youtube"></i></a>
+            <a class="h3 px-1 text-light" href=""><i class="bi bi-facebook"></i></a>
+            <a class="h3 px-1 text-light" href=""><i class="bi bi-instagram"></i></a>
+            <a class="h3 px-1 text-light" href=""><i class="bi bi-whatsapp"></i></a>
+            <a class="h3 px-1 text-light" href=""><i class="bi bi-twitter"></i></a>
+          </div>
+          <div class="col d-grid gap-2">
+            <p class="fw-bold text-light">Bantuan</p>
+            <a href="#">Kemitraan</a>
+            <a href="#">Syarat & Ketentuan</a>
+            <a href="#">Kebijakan Privasi</a>
+          </div>
+          <div class="col d-grid gap-2">
+            <p class="fw-bold text-light">GET IN TOUCH</p>
+            <a href="#">Office 8, Level 18-A Jl. Jend. Sudirman Kav. 52-53 SCBD LOT 28, Jakarta Selatan</a>
+            <a href="#">Telp. 0251 8395655</a>
+            <a href="#">Email support@beliayam.com</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <p class="text-white">@Copyright 2019 <a href="" class="text-warning">beliayam.com</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer End -->
   </body>
 
   <!-- Bootstrap 5 JS -->
@@ -194,4 +359,7 @@
 
   <!-- Swipper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+  <!-- My JS -->
+  <script src="./assets/js/script.js"></script>
 </html>
