--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body class="bg-light">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg py-3 navbar-light">
+    <nav class="navbar navbar-expand-lg py-3 fixed-top bg-light shadow navbar-light">
       <div class="container">
         <a class="navbar-brand my-auto" href="#"><img src="./assets/img/navbar/logo_navbar.png" alt="" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,16 +36,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Kategori</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Kontak</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item border-end">
+              <a class="nav-link fw-bold" href="#">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link fw-bold" href="#">Register</a>
             </li>
           </ul>
         </div>
@@ -54,9 +59,9 @@
     <!-- Navbar End -->
 
     <!-- Hero -->
-    <section id="hero">
+    <section loading="lazy" class="pt-5" id="hero">
       <div class="pembungkus-hero">
-        <div class="container pb-5">
+        <div class="container pt-5">
           <div class="row justify-content-between">
             <div class="col-lg-6 my-auto text-white">
               <h1 class="display-1 fw-bold">beliayam.com</h1>
@@ -65,7 +70,7 @@
               <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Pesan</button>
             </div>
             <div class="col">
-              <img loading="lazy" src="./assets/img/hero/1.svg" alt="" />
+              <img src="./assets/img/hero/1.svg" alt="" />
             </div>
           </div>
         </div>
@@ -82,7 +87,7 @@
             <p>Kualitas produk menjadi prioritas kami dan selau menjamin <span class="text-danger fw-bold">kehalalan</span> dan <span class="text-danger fw-bold">keamanan</span> sampai di tangan anda.</p>
           </div>
         </div>
-        <div class="row pt-3">
+        <div class="row pt-3 pembungkus-memilih">
           <div class="col-lg-4">
             <div class="card-body text-center">
               <img class="card-img-top w-50" src="./assets/img/whyUs/2.svg" alt="" />
@@ -117,15 +122,24 @@
             <h1>Kategori <span class="text-danger fw-bold">ayam</span></h1>
           </div>
         </div>
-        <div class="row justify-content-center pembungkus-profile">
+        <div class="row justify-content-center pembungkus-kategori">
           <div class="col-lg-3 p-2 text-center">
             <div class="card shadow bg-danger">
-              <img class="img-profile" src="./assets/img/kategori/1.svg" alt="" />
+              <img class="img-kategori" src="./assets/img/kategori/1.svg" alt="" />
               <div class="card-img-overlay">
-                <div class="team-bungkus p-3 w-100 text-white text-start">
+                <div class="kategori-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
                   <h5 class="card-title pb-2">Ayam Pejantan</h5>
-                  <button type="button" class="btn btn-danger py-2 px-5 rounded-pill">Detail</button>
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="card-kategori text-dark">
+              <div class="p-3 text-start text-center">
+                <p class="card-text">Rp 19.000 - Rp 20.000</p>
+                <h5 class="card-title pb-2">Ayam Pejantan</h5>
+                <div class="text-center">
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
                 </div>
               </div>
             </div>
@@ -134,10 +148,19 @@
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/2.svg" alt="" />
               <div class="card-img-overlay">
-                <div class="team-bungkus p-3 w-100 text-white text-start">
+                <div class="kategori-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
                   <h5 class="card-title pb-2">Ayam Kampung</h5>
-                  <button type="button" class="btn btn-danger py-2 px-5 rounded-pill">Detail</button>
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="card-kategori text-dark">
+              <div class="p-3 text-start text-center">
+                <p class="card-text">Rp 19.000 - Rp 20.000</p>
+                <h5 class="card-title pb-2">Ayam Kampung</h5>
+                <div class="text-center">
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
                 </div>
               </div>
             </div>
@@ -146,10 +169,19 @@
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/3.svg" alt="" />
               <div class="card-img-overlay">
-                <div class="team-bungkus p-3 w-100 text-white text-start">
+                <div class="kategori-bungkus p-3 w-100 text-white text-start">
                   <p class="card-text">Rp 19.000 - Rp 20.000</p>
                   <h5 class="card-title pb-2">Ayam Broiler</h5>
-                  <button type="button" class="btn btn-danger py-2 px-5 rounded-pill">Detail</button>
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="card-kategori text-dark">
+              <div class="p-3 text-start text-center">
+                <p class="card-text">Rp 19.000 - Rp 20.000</p>
+                <h5 class="card-title pb-2">Ayam Broiler</h5>
+                <div class="text-center">
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
                 </div>
               </div>
             </div>
@@ -158,9 +190,17 @@
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/4.svg" alt="" />
               <div class="card-img-overlay">
-                <div class="team-bungkus p-3 w-100 text-white text-start">
+                <div class="kategori-bungkus p-3 w-100 text-white text-start">
                   <h5 class="card-title py-2">Lainnya</h5>
-                  <button type="button" class="btn btn-danger py-2 px-5 rounded-pill">Detail</button>
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
+                </div>
+              </div>
+            </div>
+            <div class="card-kategori text-dark">
+              <div class="p-3 text-start text-center">
+                <h5 class="card-title py-2">Lainnya</h5>
+                <div class="text-center">
+                  <a href="#" class="btn btn-danger py-2 px-5 rounded-pill">Detail</a>
                 </div>
               </div>
             </div>
@@ -323,13 +363,15 @@
     <section class="bg-danger" id="footer">
       <div class="container">
         <div class="row py-5">
-          <div class="col-3">
+          <div class="col-lg-3 pb-5 logo-footer">
             <img src="./assets/img/navbar/logo_navbar.png" alt="" />
-            <a class="h3 px-1 text-light" href=""><i class="bi bi-youtube"></i></a>
-            <a class="h3 px-1 text-light" href=""><i class="bi bi-facebook"></i></a>
-            <a class="h3 px-1 text-light" href=""><i class="bi bi-instagram"></i></a>
-            <a class="h3 px-1 text-light" href=""><i class="bi bi-whatsapp"></i></a>
-            <a class="h3 px-1 text-light" href=""><i class="bi bi-twitter"></i></a>
+            <div>
+              <a class="h3 px-1 text-light" href=""><i class="bi bi-youtube"></i></a>
+              <a class="h3 px-1 text-light" href=""><i class="bi bi-facebook"></i></a>
+              <a class="h3 px-1 text-light" href=""><i class="bi bi-instagram"></i></a>
+              <a class="h3 px-1 text-light" href=""><i class="bi bi-whatsapp"></i></a>
+              <a class="h3 px-1 text-light" href=""><i class="bi bi-twitter"></i></a>
+            </div>
           </div>
           <div class="col d-grid gap-2">
             <p class="fw-bold text-light">Bantuan</p>
