--- a/index.html
+++ b/index.html
@@ -59,18 +59,60 @@
     <!-- Navbar End -->
 
     <!-- Hero -->
-    <section loading="lazy" class="pt-5" id="hero">
-      <div class="pembungkus-hero">
-        <div class="container pt-5">
-          <div class="row justify-content-between">
-            <div class="col-lg-6 my-auto text-white">
-              <h1 class="display-1 fw-bold">beliayam.com</h1>
-              <h4 class="text-white pt-3">Ayam <span class="fw-bold text-danger">murah</span>, semakin <span class="fw-bold text-danger">mudah</span></h4>
-              <p class="pb-3">Menjadi solusi anda untuk mendapatkan daging ayam berkualitas dengan harga terjangkau dan sangat mudah</p>
-              <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Pesan</button>
-            </div>
-            <div class="col">
-              <img src="./assets/img/hero/1.svg" alt="" />
+    <section id="hero">
+      <div class="container-fluid p-0" style="overflow: hidden">
+        <div class="row">
+          <div class="col">
+            <div class="swiper mySwiper-hero">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div loading="lazy" class="pt-5" id="hero1">
+                    <div class="pembungkus-hero py-5">
+                      <div class="container py-5">
+                        <div class="row justify-content-between">
+                          <div class="col-lg-5 my-auto text-white">
+                            <h1 class="display-2 fw-bold">beliayam.com</h1>
+                            <h4 class="text-white pt-3">Ayam <span class="fw-bold text-danger">murah</span>, semakin <span class="fw-bold text-danger">mudah</span></h4>
+                            <p class="pb-5">Menjadi solusi anda untuk mendapatkan daging ayam berkualitas dengan harga terjangkau dan sangat mudah</p>
+                            <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Pesan</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div loading="lazy" class="pt-5" id="hero2">
+                    <div class="pembungkus-hero py-5">
+                      <div class="container py-5">
+                        <div class="row justify-content-center">
+                          <div class="col-lg my-auto text-white text-center">
+                            <h1 class="display-2 fw-bold">Supplier <span class="fw-bold text-danger">Ayam</span> Terbaik!</h1>
+                            <h5 class="text-white pt-3 pb-5">Tersedia ayam pejantan, ayam kampung, ayam broiler, dan ayam lainnya.</h5>
+                            <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Pesan Sekrang</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div loading="lazy" class="pt-5" id="hero3">
+                    <div class="pembungkus-hero py-5">
+                      <div class="container py-5">
+                        <div class="row justify-content-center">
+                          <div class="col-lg my-auto text-white text-center">
+                            <h1 class="display-2 fw-bold"><span class="text-danger">GRATIS</span> ONGKIR TANPA MINIMAL ORDER!</h1>
+                            <h4 class="text-white pt-3 pb-5">Ayam <span class="fw-bold text-danger">murah</span>, semakin <span class="fw-bold text-danger">mudah</span></h4>
+                            <button type="button" class="btn btn-danger px-5 py-2 fw-bolder">Cek Sekarang</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination text-end p-5"></div>
             </div>
           </div>
         </div>
@@ -386,9 +428,11 @@
             <a href="#">Email support@beliayam.com</a>
           </div>
         </div>
+      </div>
+      <div class="container-fluid card-footer">
         <div class="row">
           <div class="col text-center">
-            <p class="text-white">@Copyright 2019 <a href="" class="text-warning">beliayam.com</a></p>
+            <p class="text-white my-auto">@Copyright 2019 <a href="" class="text-warning">beliayam.com</a></p>
           </div>
         </div>
       </div>
