ubah ukuran kategori

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>
         </div>
         <div class="row justify-content-center pembungkus-kategori">
-          <div class="col-lg-3 p-2 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card shadow bg-danger">
               <img class="img-kategori" src="./assets/img/kategori/1.svg" alt="" />
               <div class="card-img-overlay">
@@ -186,7 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 p-2 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/2.svg" alt="" />
               <div class="card-img-overlay">
@@ -207,7 +207,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 p-2 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/3.svg" alt="" />
               <div class="card-img-overlay">
@@ -228,7 +228,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 p-2 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card shadow bg-danger">
               <img class="img-profile" src="./assets/img/kategori/4.svg" alt="" />
               <div class="card-img-overlay">
