--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="swiper mySwiper-hero">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <div loading="lazy" class="pt-5" id="hero1">
+                  <div class="pt-5 lazyload" data-bgset="./assets/img/hero/1.jpg" id="hero1">
                     <div class="pembungkus-hero py-5">
                       <div class="container py-5">
                         <div class="row justify-content-between">
@@ -82,7 +82,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div loading="lazy" class="pt-5" id="hero2">
+                  <div class="pt-5 lazyload" data-bgset="./assets/img/hero/2.jpg" id="hero2">
                     <div class="pembungkus-hero py-5">
                       <div class="container py-5">
                         <div class="row justify-content-center">
@@ -97,7 +97,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div loading="lazy" class="pt-5" id="hero3">
+                  <div class="pt-5 lazyload" data-bgset="./assets/img/hero/3.jpg" id="hero3">
                     <div class="pembungkus-hero py-5">
                       <div class="container py-5">
                         <div class="row justify-content-center">
@@ -439,6 +439,10 @@
     </section>
     <!-- Footer End -->
   </body>
+
+  <!-- Lazy Load -->
+  <script src="https://afarkas.github.io/lazysizes/plugins/bgset/ls.bgset.min.js"></script>
+  <script src="https://afarkas.github.io/lazysizes/lazysizes.min.js"></script>
 
   <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
