ubah foto hero1

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="shadow my-5">
-                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white lazyload" alt="..." />
                     <div class="card-body text-start">
                       <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="shadow my-5 card-laris">
-                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white lazyload" alt="..." />
                     <div class="card-body text-start">
                       <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
@@ -292,7 +292,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="shadow my-5 card-laris">
-                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white lazyload" alt="..." />
                     <div class="card-body text-start">
                       <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="shadow my-5 card-laris">
-                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white lazyload" alt="..." />
                     <div class="card-body text-start">
                       <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="shadow my-5 card-laris">
-                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white" alt="..." />
+                    <img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top bg-white lazyload" alt="..." />
                     <div class="card-body text-start">
                       <h5 class="card-title">Kampung 0.5 - 0.6 Kg</h5>
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
