tambah kategori detail keranjang

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Kategori</a>
+              <a class="nav-link" href="./kategori.html">Kategori</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Kontak</a>
+              <a class="nav-link" href="./keranjang.html">Keranjang</a>
             </li>
           </ul>
           <ul class="navbar-nav ms-auto">
@@ -129,22 +129,22 @@
             <p>Kualitas produk menjadi prioritas kami dan selau menjamin <span class="text-danger fw-bold">kehalalan</span> dan <span class="text-danger fw-bold">keamanan</span> sampai di tangan anda.</p>
           </div>
         </div>
-        <div class="row pt-3 pembungkus-memilih">
-          <div class="col-lg-4">
+        <div class="row pt-3 justify-content-center pembungkus-memilih">
+          <div class="col-lg-4 card-gratis">
             <div class="card-body text-center">
               <img class="card-img-top w-50" src="./assets/img/whyUs/2.svg" alt="" />
               <h5 class="card-title">Gratis antar</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 card-halal">
             <div class="card-body text-center">
               <img class="card-img-top w-50" src="./assets/img/whyUs/3.svg" alt="" />
               <h5 class="card-title">Halal</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 card-aman">
             <div class="card-body text-center">
               <img class="card-img-top w-50" src="./assets/img/whyUs/4.svg" alt="" />
               <h5 class="card-title">Aman</h5>
@@ -444,6 +444,8 @@
     </section>
     <!-- Footer End -->
   </body>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 
   <!-- Lazy Load -->
   <script src="https://afarkas.github.io/lazysizes/plugins/bgset/ls.bgset.min.js"></script>
